# ai-finance-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
documents/: enhacements.md
documents/articles/: asset_allocation.txt  bonds.txt  diversification.txt  etf.txt  stocks.txt  three-fund-portfolio.txt
documents/prep/: 7-day-plan.md
src/agents/: base.py  finance_qa_agent.py  goal_agent.py  market_agent.py  portfolio_agent.py
src/rag/: loader.py  retriever.py  vector_store.py
src/scripts/: try_finance_qa_agent.py  try_goal_agent.py  try_market_agent.py  try_portfolio_agent.py
src/utils/: cache.py
src/web_app/: app.py
src/workflow/: graph.py
tests/: test_contracts.py  test_error_handling.py  test_unit_routing_and_math.py
