[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-finance-assistant"
version = "0.1.0"
description = "AI Finance Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "faiss-cpu",
  "yfinance>=0.2.40",
  "pandas>=2.0.0",
  "langgraph>=0.2.0",
  "streamlit>=1.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
